--- a/app/views/maintenances/new.html.erb
+++ b/app/views/maintenances/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= link_to maintenances_path, class: 'btn btn-default' do %>
+  <%= link_to  vehicle_maintenances_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
