--- a/app/views/maintenances/edit.html.erb
+++ b/app/views/maintenances/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="page-header">
-  <%= link_to maintenances_path, class: 'btn btn-default' do %>
+  <%= link_to vehicle_maintenances_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <%= link_to @maintenance, class: 'btn btn-primary' do %>
+  <%#= link_to @maintenance, class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-info-sign"></span>
     Show
-  <% end %>
+  <%# end %>
   <h1>Editing maintenance</h1>
 </div>
 
