--- a/app/views/maintenances/show.html.erb
+++ b/app/views/maintenances/show.html.erb
@@ -3,6 +3,10 @@
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
+  <%= link_to vehicle_maintenance_path(@vehicle, @maintenance), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' do %>
+    <span class="glyphicon glyphicon-remove-sign"></span>
+    Delete
+  <% end %>
   <%= link_to edit_vehicle_maintenance_path(@vehicle, @maintenance), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
