--- a/app/views/refuellings/edit.html.erb
+++ b/app/views/refuellings/edit.html.erb
@@ -1,11 +1,7 @@
 <div class="page-header">
-  <%= link_to refuellings_path, class: 'btn btn-default' do %>
+  <%= link_to vehicle_refuellings_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
-  <% end %>
-  <%= link_to @refuelling, class: 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-info-sign"></span>
-    Show
   <% end %>
   <h1>Editing refuelling</h1>
 </div>
