--- a/app/views/refuellings/new.html.erb
+++ b/app/views/refuellings/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <%= link_to refuellings_path, class: 'btn btn-default' do %>
+  <%= link_to vehicle_refuellings_path(@vehicle), class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
