--- a/app/views/maintenances/_form.html.erb
+++ b/app/views/maintenances/_form.html.erb
@@ -2,10 +2,10 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :date %>
+    <%= f.input :date, as: :string, input_html: { class: "datepicker", value:  f.object.date ? f.object.date.strftime('%d/%m/%Y') : Date.today.strftime('%d/%m/%Y') } %>
     <%= f.input :cost %>
     <%= f.input :description %>
-    <%= f.input :warranty %>
+    <%= f.input :warranty, as: :string, input_html: { class: "datepicker", value:  f.object.warranty ? f.object.warranty.strftime('%d/%m/%Y') : Date.today.strftime('%d/%m/%Y') } %>
     <%= f.input :mileage %>
     <%= f.association :vehicle %>
     <%= f.input :warranty_status %>
@@ -16,3 +16,7 @@
     <%= f.button :submit %>
   </div>
 <% end %>
+
+<script>
+$('.datepicker').datepicker({format: 'dd/mm/yyyy'});
+</script>
