--- a/app/views/refuellings/_form.html.erb
+++ b/app/views/refuellings/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :date %>
+    <%= f.input :date, as: :string, input_html: { class: "datepicker", value:  f.object.date ? f.object.date.strftime('%d/%m/%Y') : Date.today.strftime('%d/%m/%Y') } %>
     <%= f.input :mileage %>
     <%= f.input :liter_price %>
     <%= f.input :liters %>
@@ -14,3 +14,7 @@
     <%= f.button :submit %>
   </div>
 <% end %>
+
+<script>
+$('.datepicker').datepicker({format: 'dd/mm/yyyy'});
+</script>
