--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -46,7 +46,7 @@
                   <%= link_to vehicle_refuellings_path(vehicle) do %>
                     <i class="fa fa-tint fa-2x" data-toggle="tooltip" title="Abastecimentos"></i>
                   <% end %>
-                  <%= link_to vehicle_refuellings_url(vehicle) do %>
+                  <%= link_to vehicle_reminders_url(vehicle) do %>
                     <i class="fa fa-calendar fa-2x" data-toggle="tooltip" title="Lembretes/Agendamentos"></i>
                   <% end %>
                 </td>
